// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses summary with 1 expens 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render Expenses summary with multiple expens 1`] = `
<div>
  <h1>
    Viewing 
    16
     
    expenses
     totalling 
    $23,657,567.65
  </h1>
</div>
`;
